# AgentGate

./: .env.example  .gitignore  CLAUDE.md  PROJECT_PLAN.md  docker-compose.yml  package-lock.json  package.json
scripts/: dev.sh  reset-db.sh
src/api/: drizzle.config.ts  package.json
src/api/src/: index.ts  server.ts
src/api/src/db/: index.ts  schema.ts
src/api/src/lib/: crypto.ts  scim-schemas.ts
src/api/src/middleware/: auth.ts
src/api/src/routes/: a2a.ts  agents.ts  anomalies.ts  api-keys.ts  audit.ts  auditor.ts  auth.ts  authorize.ts  billing.ts  compliance.ts  health.ts  integrations.ts  policies.ts  policy-templates.ts  questionnaire.ts  scim.ts  sso.ts  tenants.ts  trust-center.ts  vendor-agents.ts  (+1 more)
src/cli/: package.json
src/cli/src/: client.ts  config.ts  index.ts  output.ts
src/dashboard/: next.config.ts  package.json
src/docs/: next.config.ts  package.json
src/engine/: package.json
src/engine/src/: evaluator.test.ts  evaluator.ts  index.ts  utils.ts
src/go-sdk/: README.md  agentgate.go  agentgate_test.go  errors.go  go.mod  middleware.go  types.go
src/integrations/: package.json
src/integrations/src/: anthropic.ts  base.ts  crewai.ts  index.ts  integrations.test.ts  langchain.ts  openai.ts  vanta.ts  webhook.ts
src/landing/: package.json  tsconfig.json
src/python-sdk/: README.md  pyproject.toml
src/python-sdk/src/agentgate/: __init__.py  client.py  errors.py  middleware.py  types.py
src/python-sdk/tests/: test_client.py
src/sdk/: package.json
src/sdk/src/: client.test.ts  client.ts  errors.ts  index.ts  middleware.ts
(+104 files in other folders)
